<resources>
    <string name="app_name">PoliJuegos</string>
    <string name="personajes">Escoje tu personaje</string>
    <string name="fernando">Fernando</string>
    <string name="alejandro">Alejandro</string>
    <string name="juan">Juan</string>
    <string name="jugar">Llego el momento de jugar!</string>
    <string name="seleccion">Seleccionar</string>
    <string name="f">Fer</string>
    <string name="a">Ale</string>
    <string name="jm">Raba</string>
    <string name="proxpal">Siguiente Palabra</string>
    <string name="huir">Huir</string>
    <string name="salida">Salir</string>
    <string name="volver">Volver al menu principal</string>
    <string name="jugfer">Jugar contra Fer</string>
    <string name="facil">Bebé</string>
    <string name="maome">Facil</string>
    <string name="dificil">Áspero</string>
    <string name="jugotro">2 jugadores</string>
    <string name="jugarjeje">A Jugar!</string>
    <string name="equis">X</string>
    <string name="circ">O</string>
    <string name="empate">Bien jugado! Ha sido un empate</string>
    <string name="denuevo">Jugar de nuevo</string>
    <string name="epico">Nivel FernanDios</string>
    <string name="adivina">Adivina el numero</string>
    <string name="ayuda">Ayuda</string>
    <string name="resp">Responder</string>
    <string name="ganaste">Increible! Acertaste la respuesta!!</string>
    <string name="menor">El numero ingresado es MENOR al correcto</string>
    <string name="mayor">El numero ingresado es MAYOR al correcto</string>
    <string name="vi">No quedan mas ayudas disponibles</string>
    <string name="infogame">Informacion del Juego</string>
    <string name="infogame2">La idea del juego es adivinar el numero secreto. Para esto el jugador debera ingresar un numero a partir del cual se indicara si es mayor o menor al numero buscado. El jugador consta de 4 ayudas para completar el juego, pero para obtenerlas debera responden algunas preguntas…</string>
    <string name="viddisp">Cantidad de ayudas disponibles</string>
    <string name="vidusad">Cantidad de ayudas utilizadas</string>
    <string name="rei">Reiniciar con un nuevo numero</string>
    <string name="infogame3">La idea del juego es adivinar la palabra oculta. En la pantalla se mostrara un guion por cada letra, que se ira revelando a medida que el jugador ingrese una letra correspondiente a la palabra. Los conceptos de este clasico juego de ahorcado estan relacionados con la arquitectura de las computadoras y cada palabra que aparezca tendra su respectivo significado para aprender mientras se juega.</string>
    <string name="infogame4">Este juego es ni mas ni menos que el clasico TaTeTi o Tres en Raya. El jugador dispondra de dos modalidades. En la primera podras enfrentarte al maravilloso, unico e increible Fernando en 4 distintos niveles, desde el mas facil "Bebe" al mas complejo "Nivel FernanDios", pero tranquilo, todos los niveles son ganables! En la segunda modalidad podes jugar con un amigo. Coloca tres O o tres X en linea y gana!</string>
</resources>
